Commit from local

--- a/VSynth.vcxproj.filters
+++ b/VSynth.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="AudioInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Oscillator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="cfg_button.bmp">
@@ -35,6 +38,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AudioInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Oscillator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
