--- a/VSynth.vcxproj
+++ b/VSynth.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="AudioInterface.cpp" />
     <ClCompile Include="CfgWindow.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Oscillator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="cfg_button.bmp" />
@@ -135,6 +136,7 @@
   <ItemGroup>
     <ClInclude Include="AudioInterface.h" />
     <ClInclude Include="CfgWindow.h" />
+    <ClInclude Include="Oscillator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
