--- a/VSynth.vcxproj.filters
+++ b/VSynth.vcxproj.filters
@@ -43,5 +43,8 @@
     <ClInclude Include="Oscillator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
