added MiscDSP.h file with some simple spectral filter implementations using delay of 1 or a few samples

--- a/VSynth.vcxproj
+++ b/VSynth.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="CfgWindow.h" />
     <ClInclude Include="Envelope.h" />
     <ClInclude Include="Helpers.h" />
+    <ClInclude Include="MiscDSP.h" />
     <ClInclude Include="Oscillator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
