--- a/VSynth.vcxproj.filters
+++ b/VSynth.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Envelope.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MidiInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="cfg_button.bmp">
@@ -53,6 +56,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MiscDSP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MidiInterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
