--- a/VSynth.vcxproj
+++ b/VSynth.vcxproj
@@ -147,7 +147,12 @@
     <ClCompile Include="Oscillator.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="cfg_button.bmp" />
+    <Image Include="cfg_button.bmp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioInterface.h" />
