Revert "Embed resources"
This reverts commit 96390334f95b650accf7d3eade623b19ba40fd38.

--- a/VSynth.vcxproj
+++ b/VSynth.vcxproj
@@ -147,12 +147,7 @@
     <ClCompile Include="Oscillator.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="cfg_button.bmp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
-    </Image>
+    <Image Include="cfg_button.bmp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioInterface.h" />
